# FAQ-Assistant

./: .dockerignore  .env.example  .gitignore  README.md  compose-prod.yaml  docker-compose.yaml
app/: Dockerfile  api.py  ingest.py  main.py  prompts.py  requirements.txt  security.py
app/chroma_db/: chroma.sqlite3
backend/: Dockerfile  api.py  ingest.py  main.py  ollama_setup.py  prompts.py  pyproject.toml  requirements.in  requirements.txt  security.py  visualize_token.py
backend/knowledge/FAQS/: 01_general_company_info.json  02_booking_reservations.json  06_safety_medical.json  08_special_packages_offers.json  09_inflight_experience.json  12_customer_support.json  14_travel_accommodation.json  17_environmental_sustainability.json  18_media_press.json  19_partnerships_collaborations.json  20_technical_specifications.json  21_space_philosophy_ethics.json  22_psychology_mental_health.json  23_habitation_life_support.json  24_nutrition_food.json  25_ai_robotics_automation.json  26_space_weather_risks.json  27_emergency_procedures.json  28_legal_insurance_privacy.json  29_future_missions.json  30_cultural_education.json  31_data_privacy_transparency.json  32_passenger_testimonials.json  33_government_partnerships.json  34_competitor_comparison.json  35_future_roadmap.json
backend/scripts/: ingest.py
my FAQS/: 07_spacecraft_technology.json  11_membership_loyalty.json  13_legal_documentation.json  15_corporate_private_missions.json
stream/: Dockerfile  api.py  app.py  chat_history.json  config.toml  history.py  stella.py  store.py  stream.py  style.css  styles.py
(+8 files in other folders)
